add button source

--- a/src/templates/HomePage.css
+++ b/src/templates/HomePage.css
@@ -1,3 +1,4 @@
+/* "Learn More" button from 'https://codepen.io/kathykato/pen/rZRaNe' */
 @import url("https://fonts.googleapis.com/css?family=Mukta:700");
 * {
   box-sizing: border-box;
